# Industrial_Cpp_HW1

./: Makefile  README.md
include/: calculator.hpp
scripts/: check.sh  format.sh
src_app/: CMakeLists.txt  main.cpp
src_lib/: CMakeLists.txt  calculator.cpp
test/integral/: integral_test.py
test/unit/: .gitignore  CMakeLists.txt  main.cpp
